# magic_powers_at_your_fingertips

debug_me_live/: .gitignore  CMakeLists.txt  README.md
debug_me_live/debug_me_01/: CMakeLists.txt  DESCRIPTION.md  debug_me_01.cpp
debug_me_live/debug_me_02/: CMakeLists.txt  DESCRIPTION.md  debug_me_02.cpp
debug_me_live/debug_me_03/: CMakeLists.txt  DESCRIPTION.md  debug_me_03.cpp
debug_me_live/debug_me_04/: CMakeLists.txt  DESCRIPTION.md  debug_me_04.cpp
debug_me_live/debug_me_04/inc/: deposit.h  pot.h
debug_me_live/debug_me_04/src/: pot.cpp
debug_me_live/debug_me_05/: CMakeLists.txt  DESCRIPTION.md  debug_me_05.cpp
debug_me_live/debug_me_05/data/: ctdorw.txt  gwfr.txt
debug_me_live/debug_me_05/inc/: pot_manager.h
debug_me_live/debug_me_05/src/: deposit.cpp  pot.cpp  pot_manager.cpp
debug_me_live/debug_me_06/: CMakeLists.txt  DESCRIPTION.md  debug_me_06.cpp
debug_me_live/debug_me_06/experimental/: compactor.cpp  compactor.h
debug_me_live/debug_me_06/inc/: pot.h  pot_manager.h
debug_me_live/debug_me_06/src/: pot.cpp  pot_manager.cpp
